--- a/Firmware/CH32V003F4P6/.template
+++ b/Firmware/CH32V003F4P6/.template
@@ -19,7 +19,7 @@ Erase All=false
 Program=true
 Verify=true
 Reset=true
-SDIPrintf=true
+SDIPrintf=false
 Disable Power Output=false
 Clear CodeFlash=false
 Disable Code-Protect=false
